syntax = "proto3";
package WireTypes;
option go_package = "github.com/jax-b/ModulerKTNE/WireTypes";

message ModuleState {
    optional string ModuleId = 1;
    optional string ModuleName = 2;
    optional string ModuleVersion = 3;
    optional bool IsActive = 4;
    optional bool IsSolved = 5;
}
